@@ -3,12 +3,14 @@ package com.gaia3d.basic.model;
 import com.gaia3d.basic.exchangable.GaiaBufferDataSet;
 import com.gaia3d.basic.exchangable.GaiaSet;
 import com.gaia3d.basic.geometry.GaiaBoundingBox;
+import com.gaia3d.basic.geometry.modifier.topology.GaiaExtractor;
 import com.gaia3d.basic.model.structure.SceneStructure;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import org.joml.Matrix4d;
+import org.joml.Vector3d;
 
 import java.io.Serializable;
 import java.nio.file.Path;
@@ -28,6 +30,9 @@ public class GaiaScene extends SceneStructure implements Serializable {
     private Path originalPath;
     private GaiaBoundingBox gaiaBoundingBox;
     private GaiaAttribute attribute;
+
+    // TODO: degree translation
+    private Vector3d translation = new Vector3d(0, 0, 0);
 
     public GaiaScene(GaiaSet gaiaSet) {
         List<GaiaBufferDataSet> bufferDataSets = gaiaSet.getBufferDataList();
@@ -50,15 +55,27 @@ public class GaiaScene extends SceneStructure implements Serializable {
         bufferDataSetsCopy.forEach((bufferDataSet) -> rootNode.getChildren().add(new GaiaNode(bufferDataSet)));
     }
 
-    public GaiaBoundingBox getBoundingBox() {
-        this.gaiaBoundingBox = new GaiaBoundingBox();
+    /**
+     * Updates the bounding box of the scene by iterating through all nodes.
+     * @return the updated GaiaBoundingBox of the scene.
+     */
+    public GaiaBoundingBox updateBoundingBox() {
+        GaiaBoundingBox newBoundingBox = new GaiaBoundingBox();
         for (GaiaNode node : this.getNodes()) {
             GaiaBoundingBox boundingBox = node.getBoundingBox(null);
             if (boundingBox != null) {
-                gaiaBoundingBox.addBoundingBox(boundingBox);
+                newBoundingBox.addBoundingBox(boundingBox);
             }
         }
-        return this.gaiaBoundingBox;
+        this.gaiaBoundingBox = newBoundingBox;
+        return newBoundingBox;
+    }
+
+    public GaiaNode getRootNode() {
+        if (this.nodes.isEmpty()) {
+            return null;
+        }
+        return this.nodes.getFirst();
     }
 
     public void clear() {
@@ -67,10 +84,7 @@ public class GaiaScene extends SceneStructure implements Serializable {
         this.originalPath = null;
         this.gaiaBoundingBox = null;
         this.nodes.clear();
-
-        int materialsCount = this.materials.size();
-        for (int i = 0; i < materialsCount; i++) {
-            GaiaMaterial material = this.materials.get(i);
+        for (GaiaMaterial material : this.materials) {
             material.clear();
         }
         this.materials.clear();
@@ -87,7 +101,6 @@ public class GaiaScene extends SceneStructure implements Serializable {
         clone.setOriginalPath(this.originalPath);
         clone.setGaiaBoundingBox(this.gaiaBoundingBox);
 
-        // attribute is a reference type.
         GaiaAttribute attribute = this.attribute.getCopy();
         clone.setAttribute(attribute);
         return clone;
@@ -101,24 +114,6 @@ public class GaiaScene extends SceneStructure implements Serializable {
         return triangleCount;
     }
 
-    public void makeTriangleFaces() {
-        for (GaiaNode node : this.nodes) {
-            node.makeTriangleFaces();
-        }
-    }
-
-    public void weldVertices(double error, boolean checkTexCoord, boolean checkNormal, boolean checkColor, boolean checkBatchId) {
-        for (GaiaNode node : this.nodes) {
-            node.weldVertices(error, checkTexCoord, checkNormal, checkColor, checkBatchId);
-        }
-    }
-
-    public void unWeldVertices() {
-        for (GaiaNode node : this.nodes) {
-            node.unWeldVertices();
-        }
-    }
-
     public List<GaiaFace> extractGaiaFaces(List<GaiaFace> resultFaces) {
         if (resultFaces == null) {
             resultFaces = new ArrayList<>();
@@ -130,7 +125,7 @@ public class GaiaScene extends SceneStructure implements Serializable {
     }
 
     public void joinAllSurfaces() {
-        GaiaNode rootNode = this.nodes.get(0);
+        GaiaNode rootNode = this.nodes.getFirst();
 
         GaiaMesh meshMaster = new GaiaMesh();
         GaiaPrimitive primitiveMaster = new GaiaPrimitive();
@@ -138,7 +133,8 @@ public class GaiaScene extends SceneStructure implements Serializable {
         primitiveMaster.getSurfaces().add(surfaceMaster);
         meshMaster.getPrimitives().add(primitiveMaster);
 
-        List<GaiaPrimitive> allPrimitives = this.extractPrimitives(null);
+        GaiaExtractor extractor = new GaiaExtractor();
+        List<GaiaPrimitive> allPrimitives = extractor.extractAllPrimitives(this);
         for (GaiaPrimitive primitive : allPrimitives) {
             primitiveMaster.addPrimitive(primitive);
         }
@@ -151,26 +147,11 @@ public class GaiaScene extends SceneStructure implements Serializable {
 
         GaiaNode node = new GaiaNode();
         node.getMeshes().add(meshMaster);
+        node.setParent(rootNode);
 
         children.add(node);
     }
 
-    public void getFinalVerticesCopy(List<GaiaVertex> finalVertices) {
-        // final vertices are the vertices multiplied by the transform matrix of the nodes
-        for (GaiaNode node : this.nodes) {
-            node.getFinalVerticesCopy(null, finalVertices);
-        }
-    }
-
-    public List<GaiaPrimitive> extractPrimitives(List<GaiaPrimitive> resultPrimitives) {
-        if (resultPrimitives == null) {
-            resultPrimitives = new ArrayList<>();
-        }
-        for (GaiaNode node : this.nodes) {
-            node.extractPrimitives(resultPrimitives);
-        }
-        return resultPrimitives;
-    }
 
     public void doNormalLengthUnitary() {
         for (GaiaNode node : this.nodes) {
@@ -184,41 +165,11 @@ public class GaiaScene extends SceneStructure implements Serializable {
         }
     }
 
-    public void deleteDegeneratedFaces() {
-        for (GaiaNode node : this.nodes) {
-            node.deleteDegeneratedFaces();
-        }
-    }
-
-    public void spendTranformMatrix() {
-        for (GaiaNode node : this.nodes) {
-            node.spendTranformMatrix();
-        }
-    }
-
-    public void makeTriangularFaces() {
-        for (GaiaNode node : this.nodes) {
-            node.makeTriangularFaces();
-        }
-    }
-
     public int getFacesCount() {
         int facesCount = 0;
         for (GaiaNode node : this.nodes) {
             facesCount += node.getFacesCount();
         }
         return facesCount;
-    }
-
-    public void calculateNormal() {
-        for (GaiaNode node : this.nodes) {
-            node.calculateNormal();
-        }
-    }
-
-    public void calculateVertexNormals() {
-        for (GaiaNode node : this.nodes) {
-            node.calculateVertexNormals();
-        }
     }
 }
